--- a/jehc-p/pom.xml
+++ b/jehc-p/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>jehc-p</groupId>
+	<groupId>jehc.p</groupId>
 	<artifactId>jehc-p</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>jehc-p</name>
@@ -170,109 +170,109 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-xtmodules-dao</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-xtmodules-model</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-xtmodules-service</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-base</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-base-dao</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-base-service</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-base-web</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<!-- 工作流 -->
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-base-lc</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-lcmodules-model</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-lcmodules-dao</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-lcmodules-service</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
 			<!-- 全文检索模块 -->
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-solrmodules-model</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-solrmodules-dao</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-solrmodules-service</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
 			<!-- 电商模块 -->
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-bmodules-model</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-bmodules-dao</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-bmodules-service</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			
 			<!-- OA模块 -->
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-oamodules-model</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-oamodules-dao</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>jehc-p</groupId>
+				<groupId>jehc.p</groupId>
 				<artifactId>jehc-oamodules-service</artifactId>
 				<version>${project.version}</version>
 			</dependency>
