--- a/jehc-web/src/main/webapp/WEB-INF/web.xml
+++ b/jehc-web/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,16 @@
 			classpath*:config/spring/spring.xml
 		</param-value>
 	</context-param>
-	
+    <!-- 实现负载均衡SESSION共享解决方案 需要启动Redis 
+    <filter>
+        <filter-name>springSessionRepositoryFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSessionRepositoryFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    -->
 	<!-- springmvc视图转发器配置 -->
 	<servlet>
 		<servlet-name>springmvc</servlet-name>
@@ -207,6 +216,6 @@
 	</filter-mapping>
 	<context-param>
 		<param-name>webAppRootKey</param-name>
-		<param-value>jehc-web</param-value>
+		<param-value>jehc-admin</param-value>
 	</context-param>
 </web-app>
