--- a/jehc-web/src/main/resources/config/jdbc.properties
+++ b/jehc-web/src/main/resources/config/jdbc.properties
@@ -1,30 +1,30 @@
 ##################ORACLE连接配置开始##########################
 ##默认统一用户名 密码 URL Driver配置（包含DBMSMetaUtil,BoneCP,FlexSearch中jdbc等使用模块）注：该配置为主数据库
 master.driverClassName=oracle.jdbc.driver.OracleDriver
-master.url=jdbc:oracle:thin:@127.0.0.1:1521/orcl
-master.username=hjxhe_dengcj
+master.url=jdbc:oracle:thin:@192.168.1.104:1521/orcl
+master.username=jehc
 master.password=123456
 
-ip=127.0.0.1
+ip=192.168.1.104
 port=1521
 dbname=orcl
 databasetype=oracle
 
 #从库即读写分离中”读“采用
 slave.driverClassName=oracle.jdbc.driver.OracleDriver
-slave.url=jdbc:oracle:thin:@127.0.0.1:1521/orcl
-slave.username=hjxhe_dengcj
+slave.url=jdbc:oracle:thin:@192.168.1.104:1521/orcl
+slave.username=jehc
 slave.password=123456
 
-slave.ip=127.0.0.1
+slave.ip=192.168.1.104
 slave.port=1521
 slave.dbname=orcl
 slave.databasetype=oracle
 
 ##测试数据源
 jehc.driverClassTest=oracle.jdbc.driver.OracleDriver
-jehc.urlTest=jdbc:oracle:thin:@127.0.0.1:1521/orcl
-jehc.usernameTest=hjxhe_dengcj
+jehc.urlTest=jdbc:oracle:thin:@192.168.1.104:1521/orcl
+jehc.usernameTest=jehc
 jehc.passwordTest=123456
 
 jehc.validationQuery=select 1 from dual
